--- a/src/cafe-fe/.eslintrc.json
+++ b/src/cafe-fe/.eslintrc.json
@@ -20,7 +20,7 @@
     "prettier"
   ],
   "rules": {
-    "react/prop-type": "off",
+    // "react/prop-type": "off",
     "linebreak-style": 0,
     "quotes": [2, "double", { "allowTemplateLiterals": true}],
     "prettier/prettier": 0
